--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
                 </div>
+                <div class="footer">
+                    <p class="footer"><a class="footer" target="_blank" href="https://www.linkedin.com/in/raphaeldomingoss/"_blank> &copy;Desenvolvido por Raphael Domingos</a></p>
+                </div>
             </div>
         </div>
     </div>
 </body>
-
 </html>
